# bitio

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: gtest.yml
benchmarks/: CMakeLists.txt  benchmark.cpp
include/bitio/: bitio.h
src/: bitio.cpp  bitio.h
tests/: CMakeLists.txt  bitio.cpp
